<resources>
    <string name="app_name">Falcon Guide</string>
    <string name="title_activity_maps">Map</string>
    <string name = "google_maps_key">AIzaSyB3Q0yIwYkmj2t9v8-xJ38Y_j-ks7vuZv4</string>

    <string-array name="locations">
        <item>Bryant Place</item>
        <item>Colebank Hall</item>
        <item>College Park Apartments</item>
        <item>Duvall-Rosier Field</item>
        <item>Education Building</item>
        <item>Engineering Technology Building</item>
        <item>Erickson Alumni Center</item>
        <item>Falcon Center</item>
        <item>Feaster Center</item>
        <item>Frank and Jane Gabor West Virginia Folklife Center</item>
        <item>Hardway Hall</item>
        <item>Hunt Haught Hall</item>
        <item>Jaynes Hall</item>
        <item>Morrow Hall</item>
        <item>Newman Center</item>
        <item>One Room Schoolhouse Museum</item>
        <item>Parking Garage</item>
        <item>Pence Hall</item>
        <item>Physical Plant Building</item>
        <item>Practice Field</item>
        <item>Prichard Hall</item>
        <item>Ruth Ann Musick Library</item>
        <item>Shaw House</item>
        <item>Tennis Courts</item>
        <item>Turley Student Services Center</item>
        <item>Wallman Hall</item>
        <item>Wesley Foundation</item>
        <item></item>
    </string-array>

    <string-array name="Days">
        <item>30 Days</item>
        <item>60 Days</item>
        <item>90 Days</item>
        <item>120 Days</item>
        <item>150 Days</item>
        <item>180 Days</item>
    </string-array>

    <string-array name="CalendarMonths">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="CalendarDays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="CalendarYears">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>

    <string-array name="Hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="Time">
        <item>am</item>
        <item>pm</item>
    </string-array>

    <string-array name="Minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string name="title_activity_event_maker">EventMakerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="list_headers">
        <item>Information</item>
        <item>Degree Focus</item>
        <item>Departments</item>
        <item>Events</item>
        <item>Hours</item>
    </string-array>

    <string name = "pref_previously_started"></string>

    <string name = "welcome_banner">Welcome to Falcon Guide!</string>

    <string name = "welcome_message">
        Before you get started exploring, let\'s go over some basic functionality.
    </string>

    <string name="button_banner">Toggling Views</string>

    <string name = "button_howto1">
        On the top of your map, you\'ll notice two labels:\n <b>Map</b> and <b>Event</b>
    </string>

    <string name = "button_howto2">
        These buttons toggle between the <b>event</b> and <b>map</b> views of the campus.
        In addition to being a detailed map of our campus, Falcon Guide also has an
        event feed that contains information on campus-related activities.
    </string>

    <string name="drawer_banner">Locating Buildings</string>

    <string name="drawer_howto1">
        Having trouble finding a particular location?\n <b>Swipe left</b> to find your destination!
    </string>

    <string name="drawer_howto2">
        This menu contains a search bar that can narrow down the building you wish to locate.
        When you find what you need, simply <b>tap</b> the item and we\'ll show you where it is!
    </string>

    <string name="information_banner">Learning about buildings</string>

    <string name="info_howto1">
        Want to find out more about a location?\n <b>Click the title box!</b>
    </string>

    <string name="info_howto2">
        Many of the locations contain an additional window that has information regarding
        the building history, important faculty, degree information, and current events happening
        within the building! Ever just wonder <i>what</i> a building is or <i>why</i> it\'s there?
        <i>Explore and find out!</i>
    </string>

    <string name="event_banner">Creating Events</string>

    <string name="event_howto1">
        Got a great idea for an event?\n If you would like to host an event on campus, just
        <b>tap and hold</b> on any location on the map to submit a request!
    </string>

    <string name="event_howto2">
        After you complete your event form and send the request, we\'ll need to pass it to
        campus administration to <i>get it approved.</i> In the event of approval, you will be notified
        and your event will be added to the activity feed! Congratulations!
    </string>

    <string name="thanks">
        We really hope you enjoy and make use of our app regularly here at FSU. This application
        was created by FSU\'s very own <b>Information-Systems</b> and <b>Computer Science</b> students!
        Our hope is to connect our campus even more by making this information easily available to our
        students, faculty, parents, and those considering our great university in the future.
        \n\n<b><i>Have fun exploring!</i></b>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
